# AdventOfCode2023

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: aoc2023.opam  dune-project
src/lib/: day02.ml  day03.ml  day04.ml  day06.ml  day07.ml  day08.ml  day1.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day5.ml  day7.ml  day8.ml  day9.ml  dune
src/lib/utils/: arithmetic.ml  list.ml  matrix.ml  tuple.ml
